--- a/openApiDocs/beta/DeviceManagement.Enrollment.yml
+++ b/openApiDocs/beta/DeviceManagement.Enrollment.yml
@@ -7160,6 +7160,7 @@ paths:
             items:
               enum:
                 - id
+                - allowedPrincipalTypes
                 - description
                 - displayName
                 - isBuiltIn
@@ -7221,6 +7222,8 @@ paths:
               enum:
                 - id
                 - id desc
+                - allowedPrincipalTypes
+                - allowedPrincipalTypes desc
                 - description
                 - description desc
                 - displayName
@@ -7249,6 +7252,7 @@ paths:
             items:
               enum:
                 - id
+                - allowedPrincipalTypes
                 - description
                 - displayName
                 - isBuiltIn
@@ -7333,6 +7337,7 @@ paths:
             items:
               enum:
                 - id
+                - allowedPrincipalTypes
                 - description
                 - displayName
                 - isBuiltIn
@@ -7456,6 +7461,8 @@ paths:
               enum:
                 - id
                 - id desc
+                - allowedPrincipalTypes
+                - allowedPrincipalTypes desc
                 - description
                 - description desc
                 - displayName
@@ -7484,6 +7491,7 @@ paths:
             items:
               enum:
                 - id
+                - allowedPrincipalTypes
                 - description
                 - displayName
                 - isBuiltIn
@@ -7582,6 +7590,7 @@ paths:
             items:
               enum:
                 - id
+                - allowedPrincipalTypes
                 - description
                 - displayName
                 - isBuiltIn
@@ -9123,6 +9132,7 @@ paths:
             items:
               enum:
                 - id
+                - allowedPrincipalTypes
                 - description
                 - displayName
                 - isBuiltIn
@@ -9184,6 +9194,8 @@ paths:
               enum:
                 - id
                 - id desc
+                - allowedPrincipalTypes
+                - allowedPrincipalTypes desc
                 - description
                 - description desc
                 - displayName
@@ -9212,6 +9224,7 @@ paths:
             items:
               enum:
                 - id
+                - allowedPrincipalTypes
                 - description
                 - displayName
                 - isBuiltIn
@@ -9296,6 +9309,7 @@ paths:
             items:
               enum:
                 - id
+                - allowedPrincipalTypes
                 - description
                 - displayName
                 - isBuiltIn
@@ -9419,6 +9433,8 @@ paths:
               enum:
                 - id
                 - id desc
+                - allowedPrincipalTypes
+                - allowedPrincipalTypes desc
                 - description
                 - description desc
                 - displayName
@@ -9447,6 +9463,7 @@ paths:
             items:
               enum:
                 - id
+                - allowedPrincipalTypes
                 - description
                 - displayName
                 - isBuiltIn
@@ -9545,6 +9562,7 @@ paths:
             items:
               enum:
                 - id
+                - allowedPrincipalTypes
                 - description
                 - displayName
                 - isBuiltIn
@@ -11049,6 +11067,8 @@ components:
         - title: unifiedRoleDefinition
           type: object
           properties:
+            allowedPrincipalTypes:
+              $ref: '#/components/schemas/microsoft.graph.allowedRolePrincipalTypes'
             description:
               type: string
               description: The description for the unifiedRoleDefinition. Read-only when isBuiltIn is true.
@@ -11229,6 +11249,9 @@ components:
         - androidWorkProfile
         - unknown
         - androidAOSP
+        - androidMobileApplicationManagement
+        - iOSMobileApplicationManagement
+        - unknownFutureValue
       type: string
       description: Supported platform types.
       x-ms-enum:
@@ -11265,6 +11288,15 @@ components:
           - value: androidAOSP
             description: Android AOSP.
             name: androidAOSP
+          - value: androidMobileApplicationManagement
+            description: Indicates Mobile Application Management (MAM) for android devices.
+            name: androidMobileApplicationManagement
+          - value: iOSMobileApplicationManagement
+            description: Indicates Mobile Application Management (MAM) for iOS devices
+            name: iOSMobileApplicationManagement
+          - value: unknownFutureValue
+            description: Evolvable enumeration sentinel value. Do not use
+            name: unknownFutureValue
     microsoft.graph.deviceAndAppManagementAssignmentTarget:
       title: deviceAndAppManagementAssignmentTarget
       type: object
@@ -11459,7 +11491,7 @@ components:
               description: Indicates if siri setup pane is disabled
             supervisedModeEnabled:
               type: boolean
-              description: 'Supervised mode, True to enable, false otherwise. See hhttps://learn.microsoft.com/mem/intune/enrollment/device-enrollment for additional information.'
+              description: 'Supervised mode, True to enable, false otherwise. See https://learn.microsoft.com/intune/deploy-use/enroll-devices-in-microsoft-intune for additional information.'
             supportDepartment:
               type: string
               description: Support department information
@@ -12013,6 +12045,14 @@ components:
               x-ms-navigationProperty: true
           additionalProperties:
             type: object
+    microsoft.graph.allowedRolePrincipalTypes:
+      title: allowedRolePrincipalTypes
+      enum:
+        - user
+        - servicePrincipal
+        - group
+        - unknownFutureValue
+      type: string
     microsoft.graph.unifiedRolePermission:
       title: unifiedRolePermission
       type: object
