--- a/openApiDocs/v1.0/Identity.SignIns.yml
+++ b/openApiDocs/v1.0/Identity.SignIns.yml
@@ -6752,6 +6752,7 @@ paths:
               enum:
                 - id
                 - deletedDateTime
+                - signInActivity
                 - accountEnabled
                 - ageGroup
                 - assignedLicenses
@@ -7794,7 +7795,11 @@ paths:
     get:
       tags:
         - policies.appManagementPolicy
-      summary: Get appManagementPolicies from policies
+      summary: List appManagementPolicies
+      description: Retrieve a list of appManagementPolicy objects.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/appmanagementpolicy-list?view=graph-rest-1.0
       operationId: policies_ListAppManagementPolicies
       parameters:
         - $ref: '#/components/parameters/top'
@@ -7868,7 +7873,11 @@ paths:
     post:
       tags:
         - policies.appManagementPolicy
-      summary: Create new navigation property to appManagementPolicies for policies
+      summary: Create appManagementPolicy
+      description: Create an appManagementPolicy object.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/appmanagementpolicy-post?view=graph-rest-1.0
       operationId: policies_CreateAppManagementPolicies
       requestBody:
         description: New navigation property
@@ -7892,6 +7901,7 @@ paths:
       tags:
         - policies.appManagementPolicy
       summary: Get appManagementPolicies from policies
+      description: 'The policies that enforce app management restrictions for specific applications and service principals, overriding the defaultAppManagementPolicy.'
       operationId: policies_GetAppManagementPolicies
       parameters:
         - name: appManagementPolicy-id
@@ -8004,7 +8014,11 @@ paths:
     get:
       tags:
         - policies.appManagementPolicy
-      summary: Get appliesTo from policies
+      summary: List appliesTo
+      description: List application and service principal objects that are assigned an appManagementPolicy policy object.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/appManagementPolicy-list-appliesTo?view=graph-rest-1.0
       operationId: policies.appManagementPolicies_ListAppliesTo
       parameters:
         - name: appManagementPolicy-id
@@ -8244,6 +8258,7 @@ paths:
                 - description
                 - displayName
                 - lastModifiedDateTime
+                - policyMigrationState
                 - policyVersion
                 - reconfirmationInDays
                 - registrationEnforcement
@@ -8341,6 +8356,8 @@ paths:
               enum:
                 - id
                 - id desc
+                - excludeTargets
+                - excludeTargets desc
                 - state
                 - state desc
               type: string
@@ -8355,6 +8372,7 @@ paths:
             items:
               enum:
                 - id
+                - excludeTargets
                 - state
               type: string
         - name: $expand
@@ -8427,6 +8445,7 @@ paths:
             items:
               enum:
                 - id
+                - excludeTargets
                 - state
               type: string
         - name: $expand
@@ -9475,7 +9494,11 @@ paths:
     get:
       tags:
         - policies.tenantAppManagementPolicy
-      summary: Get defaultAppManagementPolicy from policies
+      summary: Get tenantAppManagementPolicy
+      description: Read the properties of a tenantAppManagementPolicy object.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/tenantappmanagementpolicy-get?view=graph-rest-1.0
       operationId: policies_GetDefaultAppManagementPolicy
       parameters:
         - name: $select
@@ -9521,7 +9544,11 @@ paths:
     patch:
       tags:
         - policies.tenantAppManagementPolicy
-      summary: Update the navigation property defaultAppManagementPolicy in policies
+      summary: Update tenantAppManagementPolicy
+      description: Update the properties of a tenantAppManagementPolicy object.
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/tenantappmanagementpolicy-update?view=graph-rest-1.0
       operationId: policies_UpdateDefaultAppManagementPolicy
       requestBody:
         description: New navigation property values
@@ -15869,6 +15896,8 @@ components:
         - title: user
           type: object
           properties:
+            signInActivity:
+              $ref: '#/components/schemas/microsoft.graph.signInActivity'
             accountEnabled:
               type: boolean
               description: 'true if the account is enabled; otherwise, false. This property is required when a user is created. Returned only on $select. Supports $filter (eq, ne, not, and in).'
@@ -16464,6 +16493,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.appManagementPolicy'
+              description: 'The policies that enforce app management restrictions for specific applications and service principals, overriding the defaultAppManagementPolicy.'
               x-ms-navigationProperty: true
             authorizationPolicy:
               $ref: '#/components/schemas/microsoft.graph.authorizationPolicy'
@@ -16641,6 +16671,8 @@ components:
               description: The date and time of the last update to the policy. Read-only.
               format: date-time
               nullable: true
+            policyMigrationState:
+              $ref: '#/components/schemas/microsoft.graph.authenticationMethodsPolicyMigrationState'
             policyVersion:
               type: string
               description: The version of the policy in use. Read-only.
@@ -16667,6 +16699,11 @@ components:
         - title: authenticationMethodConfiguration
           type: object
           properties:
+            excludeTargets:
+              type: array
+              items:
+                $ref: '#/components/schemas/microsoft.graph.excludeTarget'
+              description: Groups of users that are excluded from a policy.
             state:
               $ref: '#/components/schemas/microsoft.graph.authenticationMethodState'
           additionalProperties:
@@ -16788,6 +16825,7 @@ components:
               $ref: '#/components/schemas/microsoft.graph.appManagementConfiguration'
             isEnabled:
               type: boolean
+              description: Denotes whether the policy is enabled. Default value is false.
             servicePrincipalRestrictions:
               $ref: '#/components/schemas/microsoft.graph.appManagementConfiguration'
           additionalProperties:
@@ -17838,6 +17876,28 @@ components:
         messageLanguage:
           type: string
           description: 'The language you want to send the default message in. If the customizedMessageBody is specified, this property is ignored, and the message is sent using the customizedMessageBody. The language format should be in ISO 639. The default is en-US.'
+          nullable: true
+      additionalProperties:
+        type: object
+    microsoft.graph.signInActivity:
+      title: signInActivity
+      type: object
+      properties:
+        lastNonInteractiveSignInDateTime:
+          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+          type: string
+          format: date-time
+          nullable: true
+        lastNonInteractiveSignInRequestId:
+          type: string
+          nullable: true
+        lastSignInDateTime:
+          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+          type: string
+          format: date-time
+          nullable: true
+        lastSignInRequestId:
+          type: string
           nullable: true
       additionalProperties:
         type: object
@@ -20120,10 +20180,12 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.keyCredentialConfiguration'
+          description: Collection of keyCredential restrictions settings to be applied to an application or service principal.
         passwordCredentials:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.passwordCredentialConfiguration'
+          description: Collection of password restrictions settings to be applied to an application or service principal.
       additionalProperties:
         type: object
     microsoft.graph.selfServiceSignUpAuthenticationFlowConfiguration:
@@ -20135,12 +20197,31 @@ components:
           description: Indicates whether self-service sign-up flow is enabled or disabled. The default value is false. This property is not a key. Required.
       additionalProperties:
         type: object
+    microsoft.graph.authenticationMethodsPolicyMigrationState:
+      title: authenticationMethodsPolicyMigrationState
+      enum:
+        - preMigration
+        - migrationInProgress
+        - migrationComplete
+        - unknownFutureValue
+      type: string
     microsoft.graph.registrationEnforcement:
       title: registrationEnforcement
       type: object
       properties:
         authenticationMethodsRegistrationCampaign:
           $ref: '#/components/schemas/microsoft.graph.authenticationMethodsRegistrationCampaign'
+      additionalProperties:
+        type: object
+    microsoft.graph.excludeTarget:
+      title: excludeTarget
+      type: object
+      properties:
+        id:
+          type: string
+          description: The object identifier of an Azure Active Directory user or group.
+        targetType:
+          $ref: '#/components/schemas/microsoft.graph.authenticationMethodTargetType'
       additionalProperties:
         type: object
     microsoft.graph.authenticationMethodState:
@@ -24834,6 +24915,7 @@ components:
         restrictForAppsCreatedAfterDateTime:
           pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
           type: string
+          description: 'Timestamp when the policy is enforced for all apps created on or after the specified date. For existing applications, the enforcement date would be back dated. To apply to all applications regardless of their creation date, this property would be null. Nullable.'
           format: date-time
           nullable: true
         restrictionType:
@@ -24852,6 +24934,7 @@ components:
         restrictForAppsCreatedAfterDateTime:
           pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
           type: string
+          description: 'Enforces the policy for an app created on or after the enforcement date. For existing applications, the enforcement date would be back dated. To apply to all applications, enforcement datetime would be null.'
           format: date-time
           nullable: true
         restrictionType:
@@ -24882,6 +24965,13 @@ components:
           $ref: '#/components/schemas/microsoft.graph.advancedConfigState'
       additionalProperties:
         type: object
+    microsoft.graph.authenticationMethodTargetType:
+      title: authenticationMethodTargetType
+      enum:
+        - user
+        - group
+        - unknownFutureValue
+      type: string
     microsoft.graph.crossTenantAccessPolicyTargetConfiguration:
       title: crossTenantAccessPolicyTargetConfiguration
       type: object
@@ -28240,17 +28330,6 @@ components:
         - customPasswordAddition
         - unknownFutureValue
       type: string
-    microsoft.graph.excludeTarget:
-      title: excludeTarget
-      type: object
-      properties:
-        id:
-          type: string
-          description: The object identifier of an Azure Active Directory user or group.
-        targetType:
-          $ref: '#/components/schemas/microsoft.graph.authenticationMethodTargetType'
-      additionalProperties:
-        type: object
     microsoft.graph.authenticationMethodsRegistrationCampaignIncludeTarget:
       title: authenticationMethodsRegistrationCampaignIncludeTarget
       type: object
@@ -29562,15 +29641,15 @@ components:
           properties:
             applicationName:
               type: string
-              description: Field indicating the app name of the source that is sending the linkedResource.
+              description: The app name of the source that sends the linkedResource.
               nullable: true
             displayName:
               type: string
-              description: Field indicating the title of the linkedResource.
+              description: The title of the linkedResource.
               nullable: true
             externalId:
               type: string
-              description: Id of the object that is associated with this task on the third-party/partner system.
+              description: ID of the object that is associated with this task on the third-party/partner system.
               nullable: true
             webUrl:
               type: string
@@ -29578,13 +29657,6 @@ components:
               nullable: true
           additionalProperties:
             type: object
-    microsoft.graph.authenticationMethodTargetType:
-      title: authenticationMethodTargetType
-      enum:
-        - user
-        - group
-        - unknownFutureValue
-      type: string
     microsoft.graph.crossTenantAccessPolicyTargetType:
       title: crossTenantAccessPolicyTargetType
       enum:
