--- a/openApiDocs/v1.0/Security.yml
+++ b/openApiDocs/v1.0/Security.yml
@@ -284,125 +284,6 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
-  '/security/alerts/{alert-id}':
-    get:
-      tags:
-        - security.alert
-      summary: Get alerts from security
-      operationId: security_GetAlerts
-      parameters:
-        - name: alert-id
-          in: path
-          description: The unique identifier of alert
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: alert
-        - name: $select
-          in: query
-          description: Select properties to be returned
-          style: form
-          explode: false
-          schema:
-            uniqueItems: true
-            type: array
-            items:
-              enum:
-                - id
-                - activityGroupName
-                - alertDetections
-                - assignedTo
-                - azureSubscriptionId
-                - azureTenantId
-                - category
-                - closedDateTime
-                - cloudAppStates
-                - comments
-                - confidence
-                - createdDateTime
-                - description
-                - detectionIds
-                - eventDateTime
-                - feedback
-                - fileStates
-                - historyStates
-                - hostStates
-                - incidentIds
-                - investigationSecurityStates
-                - lastEventDateTime
-                - lastModifiedDateTime
-                - malwareStates
-                - messageSecurityStates
-                - networkConnections
-                - processes
-                - recommendedActions
-                - registryKeyStates
-                - securityResources
-                - severity
-                - sourceMaterials
-                - status
-                - tags
-                - title
-                - triggers
-                - uriClickSecurityStates
-                - userStates
-                - vendorInformation
-                - vulnerabilityStates
-              type: string
-        - name: $expand
-          in: query
-          description: Expand related entities
-          style: form
-          explode: false
-          schema:
-            uniqueItems: true
-            type: array
-            items:
-              enum:
-                - '*'
-              type: string
-      responses:
-        2XX:
-          description: Retrieved navigation property
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.alert'
-        default:
-          $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
-    patch:
-      tags:
-        - security.alert
-      summary: Update the navigation property alerts in security
-      operationId: security_UpdateAlerts
-      parameters:
-        - name: alert-id
-          in: path
-          description: The unique identifier of alert
-          required: true
-          style: simple
-          schema:
-            type: string
-          x-ms-docs-key-type: alert
-      requestBody:
-        description: New navigation property values
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/microsoft.graph.alert'
-        required: true
-      responses:
-        2XX:
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/microsoft.graph.alert'
-        default:
-          $ref: '#/components/responses/error'
-      x-ms-docs-operation-type: operation
   /security/alerts_v2:
     get:
       tags:
@@ -703,6 +584,125 @@ paths:
       responses:
         2XX:
           description: Success
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+  '/security/alerts/{alert-id}':
+    get:
+      tags:
+        - security.alert
+      summary: Get alerts from security
+      operationId: security_GetAlerts
+      parameters:
+        - name: alert-id
+          in: path
+          description: The unique identifier of alert
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: alert
+        - name: $select
+          in: query
+          description: Select properties to be returned
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - id
+                - activityGroupName
+                - alertDetections
+                - assignedTo
+                - azureSubscriptionId
+                - azureTenantId
+                - category
+                - closedDateTime
+                - cloudAppStates
+                - comments
+                - confidence
+                - createdDateTime
+                - description
+                - detectionIds
+                - eventDateTime
+                - feedback
+                - fileStates
+                - historyStates
+                - hostStates
+                - incidentIds
+                - investigationSecurityStates
+                - lastEventDateTime
+                - lastModifiedDateTime
+                - malwareStates
+                - messageSecurityStates
+                - networkConnections
+                - processes
+                - recommendedActions
+                - registryKeyStates
+                - securityResources
+                - severity
+                - sourceMaterials
+                - status
+                - tags
+                - title
+                - triggers
+                - uriClickSecurityStates
+                - userStates
+                - vendorInformation
+                - vulnerabilityStates
+              type: string
+        - name: $expand
+          in: query
+          description: Expand related entities
+          style: form
+          explode: false
+          schema:
+            uniqueItems: true
+            type: array
+            items:
+              enum:
+                - '*'
+              type: string
+      responses:
+        2XX:
+          description: Retrieved navigation property
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.alert'
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: operation
+    patch:
+      tags:
+        - security.alert
+      summary: Update the navigation property alerts in security
+      operationId: security_UpdateAlerts
+      parameters:
+        - name: alert-id
+          in: path
+          description: The unique identifier of alert
+          required: true
+          style: simple
+          schema:
+            type: string
+          x-ms-docs-key-type: alert
+      requestBody:
+        description: New navigation property values
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/microsoft.graph.alert'
+        required: true
+      responses:
+        2XX:
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/microsoft.graph.alert'
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: operation
@@ -12686,6 +12686,8 @@ components:
         - title: user
           type: object
           properties:
+            signInActivity:
+              $ref: '#/components/schemas/microsoft.graph.signInActivity'
             accountEnabled:
               type: boolean
               description: 'true if the account is enabled; otherwise, false. This property is required when a user is created. Returned only on $select. Supports $filter (eq, ne, not, and in).'
@@ -15289,6 +15291,28 @@ components:
           $ref: '#/components/schemas/microsoft.graph.userTrainingContentEventInfo'
         trainingUpdatedProperties:
           $ref: '#/components/schemas/microsoft.graph.userTrainingContentEventInfo'
+      additionalProperties:
+        type: object
+    microsoft.graph.signInActivity:
+      title: signInActivity
+      type: object
+      properties:
+        lastNonInteractiveSignInDateTime:
+          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+          type: string
+          format: date-time
+          nullable: true
+        lastNonInteractiveSignInRequestId:
+          type: string
+          nullable: true
+        lastSignInDateTime:
+          pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
+          type: string
+          format: date-time
+          nullable: true
+        lastSignInRequestId:
+          type: string
+          nullable: true
       additionalProperties:
         type: object
     microsoft.graph.assignedPlan:
@@ -22883,15 +22907,15 @@ components:
           properties:
             applicationName:
               type: string
-              description: Field indicating the app name of the source that is sending the linkedResource.
+              description: The app name of the source that sends the linkedResource.
               nullable: true
             displayName:
               type: string
-              description: Field indicating the title of the linkedResource.
+              description: The title of the linkedResource.
               nullable: true
             externalId:
               type: string
-              description: Id of the object that is associated with this task on the third-party/partner system.
+              description: ID of the object that is associated with this task on the third-party/partner system.
               nullable: true
             webUrl:
               type: string
